@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2023 Obeo.
+ * Copyright (c) 2021, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -58,6 +58,11 @@ export interface GQLCreateDocumentPayload {
 }
 
 export interface GQLSuccessPayload extends GQLCreateDocumentPayload {
+  id: string;
+  document: GQLDocument;
+}
+
+export interface GQLDocument {
   id: string;
 }
 
